Fixed layout of advisor index jsp and card spacing, removed images from student cards, and fixed logout button spacing issue.

--- a/CS320_YCP_Personalized_Commencement_Project/war/css/AdvisorIndex.css
+++ b/CS320_YCP_Personalized_Commencement_Project/war/css/AdvisorIndex.css
@@ -29,16 +29,17 @@ tr.row td{
 	width: 100%;
 }
 #instructions {
-	width: 600px;
+	width: 70%;
 	margin: auto;
 	font-size: 16px;
 	text-align: center;
 }
 #logoutDiv {
 	text-align: center;
-	margin-top: 15px;
+	margin-left: 60%;
+	margin-top: 10px;
 	margin-bottom: 30px;
-	margin-left: 515px;
+	width: 100%;
 }
 .title {
 	color: green;
